--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Smart Irrigation System</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: times new romans, sans-serif;
       background: #e6f2ff;
       color: #333;
       padding: 40px;
