--- a/index.html
+++ b/index.html
@@ -1,30 +1,264 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Smart Irrigation System</title>
-  <style>
-    body {
-      font-family: times new romans, sans-serif;
-      background: #e6f2ff;
-      color: #333;
-      padding: 40px;
-      text-align: center;
+
+"use client"
+
+import type React from "react"
+
+import { useState } from "react"
+import { useRouter } from "next/navigation"
+import { Eye, EyeOff } from "lucide-react"
+import { Button } from "@/components/ui/button"
+import { Input } from "@/components/ui/input"
+import { Label } from "@/components/ui/label"
+import { Card, CardContent, CardDescription, CardFooter, CardHeader } from "@/components/ui/card"
+import { Tabs, TabsContent, TabsList, TabsTrigger } from "@/components/ui/tabs"
+import { useToast } from "@/components/ui/use-toast"
+
+export default function AuthPage() {
+  const router = useRouter()
+  const { toast } = useToast()
+  const [showPassword, setShowPassword] = useState(false)
+
+  // Login form state
+  const [loginForm, setLoginForm] = useState({
+    phone: "",
+    password: "",
+  })
+
+  // Register form state
+  const [registerForm, setRegisterForm] = useState({
+    name: "",
+    phone: "",
+    password: "",
+    confirmPassword: "",
+  })
+
+  // Forgot password state
+  const [forgotPhone, setForgotPhone] = useState("")
+  const [otpSent, setOtpSent] = useState(false)
+  const [otp, setOtp] = useState("")
+
+  const handleLogin = (e: React.FormEvent) => {
+    e.preventDefault()
+    // In a real app, this would call an API to authenticate
+    toast({
+      title: "Login Successful",
+      description: "Welcome back to Hey Kisan!",
+    })
+    router.push("/dashboard")
+  }
+
+  const handleRegister = (e: React.FormEvent) => {
+    e.preventDefault()
+    if (registerForm.password !== registerForm.confirmPassword) {
+      toast({
+        title: "Error",
+        description: "Passwords do not match",
+        variant: "destructive",
+      })
+      return
     }
-    .card {
-      background: #fff;
-      padding: 20px;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      max-width: 500px;
-      margin: auto;
-    }
-  </style>
-</head>
-<body>
-  <div class="card">
-    <h1>Smart Irrigation System</h1>
-    <p>A smart irrigation system using AI optimizes water by analyzing weather, soil, and crop data for efficient, eco-friendly farming.</p>
-  </div>
-</body>
-</html>
+    // In a real app, this would call an API to register
+    toast({
+      title: "Registration Successful",
+      description: "Your account has been created!",
+    })
+    router.push("/dashboard")
+  }
+
+  const handleSendOtp = (e: React.FormEvent) => {
+    e.preventDefault()
+    // In a real app, this would call an API to send OTP
+    setOtpSent(true)
+    toast({
+      title: "OTP Sent",
+      description: `A verification code has been sent to ${forgotPhone}`,
+    })
+  }
+
+  const handleVerifyOtp = (e: React.FormEvent) => {
+    e.preventDefault()
+    // In a real app, this would call an API to verify OTP
+    toast({
+      title: "OTP Verified",
+      description: "You can now reset your password",
+    })
+    router.push("/auth/reset-password")
+  }
+
+  return (
+    <div className="min-h-screen bg-gradient-to-b from-green-50 to-green-100 flex items-center justify-center p-4">
+      <Card className="w-full max-w-md">
+        <Tabs defaultValue="login">
+          <CardHeader>
+            <TabsList className="grid w-full grid-cols-2">
+              <TabsTrigger value="login">Login</TabsTrigger>
+              <TabsTrigger value="register">Register</TabsTrigger>
+            </TabsList>
+            <CardDescription className="pt-4 text-center">Access your Hey Kisan account</CardDescription>
+          </CardHeader>
+
+          <CardContent>
+            <TabsContent value="login">
+              <form onSubmit={handleLogin} className="space-y-4">
+                <div className="space-y-2">
+                  <Label htmlFor="phone">Phone Number</Label>
+                  <Input
+                    id="phone"
+                    type="tel"
+                    placeholder="Enter your phone number"
+                    value={loginForm.phone}
+                    onChange={(e) => setLoginForm({ ...loginForm, phone: e.target.value })}
+                    required
+                  />
+                </div>
+                <div className="space-y-2">
+                  <div className="flex justify-between">
+                    <Label htmlFor="password">Password</Label>
+                    <button
+                      type="button"
+                      className="text-xs text-green-600 hover:underline"
+                      onClick={() => {
+                        setOtpSent(false)
+                        toast({
+                          title: "Forgot Password",
+                          description: "Please enter your phone number to receive an OTP",
+                        })
+                      }}
+                    >
+                      Forgot Password?
+                    </button>
+                  </div>
+                  <div className="relative">
+                    <Input
+                      id="password"
+                      type={showPassword ? "text" : "password"}
+                      placeholder="Enter your password"
+                      value={loginForm.password}
+                      onChange={(e) => setLoginForm({ ...loginForm, password: e.target.value })}
+                      required
+                    />
+                    <button
+                      type="button"
+                      className="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500"
+                      onClick={() => setShowPassword(!showPassword)}
+                    >
+                      {showPassword ? <EyeOff size={16} /> : <Eye size={16} />}
+                    </button>
+                  </div>
+                </div>
+                <Button type="submit" className="w-full bg-green-600 hover:bg-green-700">
+                  Login
+                </Button>
+              </form>
+            </TabsContent>
+
+            <TabsContent value="register">
+              <form onSubmit={handleRegister} className="space-y-4">
+                <div className="space-y-2">
+                  <Label htmlFor="name">Full Name</Label>
+                  <Input
+                    id="name"
+                    placeholder="Enter your full name"
+                    value={registerForm.name}
+                    onChange={(e) => setRegisterForm({ ...registerForm, name: e.target.value })}
+                    required
+                  />
+                </div>
+                <div className="space-y-2">
+                  <Label htmlFor="reg-phone">Phone Number</Label>
+                  <Input
+                    id="reg-phone"
+                    type="tel"
+                    placeholder="Enter your phone number"
+                    value={registerForm.phone}
+                    onChange={(e) => setRegisterForm({ ...registerForm, phone: e.target.value })}
+                    required
+                  />
+                </div>
+                <div className="space-y-2">
+                  <Label htmlFor="reg-password">Password</Label>
+                  <div className="relative">
+                    <Input
+                      id="reg-password"
+                      type={showPassword ? "text" : "password"}
+                      placeholder="Create a password"
+                      value={registerForm.password}
+                      onChange={(e) => setRegisterForm({ ...registerForm, password: e.target.value })}
+                      required
+                    />
+                    <button
+                      type="button"
+                      className="absolute right-3 top-1/2 -translate-y-1/2 text-gray-500"
+                      onClick={() => setShowPassword(!showPassword)}
+                    >
+                      {showPassword ? <EyeOff size={16} /> : <Eye size={16} />}
+                    </button>
+                  </div>
+                </div>
+                <div className="space-y-2">
+                  <Label htmlFor="confirm-password">Confirm Password</Label>
+                  <Input
+                    id="confirm-password"
+                    type={showPassword ? "text" : "password"}
+                    placeholder="Confirm your password"
+                    value={registerForm.confirmPassword}
+                    onChange={(e) => setRegisterForm({ ...registerForm, confirmPassword: e.target.value })}
+                    required
+                  />
+                </div>
+                <Button type="submit" className="w-full bg-green-600 hover:bg-green-700">
+                  Register
+                </Button>
+              </form>
+            </TabsContent>
+          </CardContent>
+        </Tabs>
+
+        <CardFooter className="flex justify-center border-t p-4">
+          <div className="text-center text-sm text-gray-500">
+            {!otpSent ? (
+              <div className="space-y-4">
+                <h3 className="font-medium">Forgot Password?</h3>
+                <form onSubmit={handleSendOtp} className="space-y-4">
+                  <div className="space-y-2">
+                    <Label htmlFor="forgot-phone">Phone Number</Label>
+                    <Input
+                      id="forgot-phone"
+                      type="tel"
+                      placeholder="Enter your phone number"
+                      value={forgotPhone}
+                      onChange={(e) => setForgotPhone(e.target.value)}
+                      required
+                    />
+                  </div>
+                  <Button type="submit" variant="outline" className="w-full">
+                    Send OTP
+                  </Button>
+                </form>
+              </div>
+            ) : (
+              <div className="space-y-4">
+                <h3 className="font-medium">Verify OTP</h3>
+                <form onSubmit={handleVerifyOtp} className="space-y-4">
+                  <div className="space-y-2">
+                    <Label htmlFor="otp">Enter OTP</Label>
+                    <Input
+                      id="otp"
+                      placeholder="Enter the OTP sent to your phone"
+                      value={otp}
+                      onChange={(e) => setOtp(e.target.value)}
+                      required
+                    />
+                  </div>
+                  <Button type="submit" variant="outline" className="w-full">
+                    Verify OTP
+                  </Button>
+                </form>
+              </div>
+            )}
+          </div>
+        </CardFooter>
+      </Card>
+    </div>
+  )
+}
